[media-source] Fix imported/w3c/web-platform-tests/media-source/mediasource-preload.html https://bugs.webkit.org/show_bug.cgi?id=162304

Reviewed by Darin Adler.

Source/WebCore:

If an error occurs while loading a URL on behalf of MediaPlayerPrivateAVFObjC, make sure to signal
that error to AVFoundation, so that the HTMLMediaElement is notified of the error.

* platform/graphics/avfoundation/objc/WebCoreAVFResourceLoader.mm:
(WebCore::WebCoreAVFResourceLoader::notifyFinished):

LayoutTests:

* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/180334@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206185 268f45cc-cd09-0410-ab3c-d52691b4dbfc